--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "autoprefixer": "^10.4.16",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "nodemailer": "^6.9.7",
     "postcss": "^8",
     "prisma": "^5.7.1",
     "tailwindcss": "^3.4.0",
