--- a/package.json
+++ b/package.json
@@ -3,16 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "prisma generate && next dev",
-    "build": "prisma generate && next build",
-    "start": "prisma generate && next start",
+    "typeGen": "pg-to-ts generate -c eval $(grep '^NODE_ENV' .env) -o ./src/types/dbschema.ts",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.12",
     "@hookform/resolvers": "^3.3.2",
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.7.1",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -26,14 +24,11 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
-    "@tanstack/react-query": "^5.15.5",
-    "@tanstack/react-query-devtools": "^5.15.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "iron-session": "^8.0.1",
     "lucide-react": "^0.299.0",
     "next": "14.0.4",
-    "next-auth": "^4.24.5",
-    "openai": "^4.24.0",
     "react": "^18",
     "react-arborist": "^3.4.0",
     "react-dom": "^18",
@@ -51,9 +46,8 @@
     "autoprefixer": "^10.4.16",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
-    "nodemailer": "^6.9.7",
+    "pg-to-ts": "^4.1.1",
     "postcss": "^8",
-    "prisma": "^5.7.1",
     "tailwindcss": "^3.4.0",
     "typescript": "^5"
   }
