--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.3.2",
+    "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -25,30 +25,31 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
+    "clsx": "^2.1.0",
     "iron-session": "^8.0.1",
-    "lucide-react": "^0.299.0",
-    "next": "14.0.4",
+    "lucide-react": "^0.314.0",
+    "next": "14.1.0",
     "react": "^18",
     "react-arborist": "^3.4.0",
     "react-dom": "^18",
-    "react-hook-form": "^7.49.2",
-    "react-resizable-panels": "^1.0.5",
-    "tailwind-merge": "^2.1.0",
+    "react-hook-form": "^7.49.3",
+    "react-resizable-panels": "^1.0.9",
+    "swr": "^2.2.4",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "wretch": "^2.7.1",
+    "wretch": "^2.8.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "14.1.0",
     "pg-to-ts": "^4.1.1",
     "postcss": "^8",
-    "tailwindcss": "^3.4.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
